# seq2seq-recipe-generation-nlp

./: .gitignore  README.md  academic-integrity.md  pyproject.toml  requirements.txt  setup.py
artifacts/metrics/: attention_epoch_metrics.csv  model_config_table.csv  no_attention_epoch_metrics.csv  test_metrics.csv
artifacts/sample_outputs/: qualitative_outputs.csv
configs/: baseline.yaml
data/: README.md
src/recipe_generation/: __init__.py  data.py  dataset.py  decoding.py  metrics.py  model.py  plot_artifacts.py  summarize_data.py  tokenization.py
tests/: test_data_and_metrics.py  test_model.py
